style.css
body {
    font-family: Arial, sans-serif;
    text-align: center;
    background-color: #eef2f3;
    margin: 0;
    padding: 0;
}

.container {
    margin-top: 50px;
}

h1 {
    font-size: 2rem;
    color: #333;
}

h2 {
    font-size: 1.5rem;
    color: #333;
}

form {
    display: inline-block;
    margin: auto;
}

table {
    border-collapse: collapse;
    margin: 0 auto;
    background-color: #ffffff;
    border: 3px solid #333;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

td {
    width: 60px;
    height: 60px;
    border: 1px solid #ddd;
    text-align: center;
    background-color: #f9f9f9;
}

input[type="text"] {
    width: 100%;
    height: 100%;
    font-size: 1.5rem;
    text-align: center;
    border: none;
    outline: none;
    background-color: transparent;
    color: #333;
    caret-color: transparent; /* Hides the writing bar */
    padding: 0;
    margin: 0;
}

input[type="text"]:focus {
    background-color: rgba(255, 235, 170, 0.6); /* Subtle highlight for the selected cell */
    box-shadow: inset 0 0 2px 2px #ffcc80; /* Clean focus effect */
    color: #000;
}

input[type="text"]:focus-visible {
    outline: none; /* Remove default focus outline */
    caret-color: transparent; /* Ensure the caret doesn't display */
}

input[type="submit"] {
    margin-top: 20px;
    padding: 12px 24px;
    font-size: 1.2rem;
    font-weight: bold;
    background-color: #3399ff;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 6px;
    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
    transition: background-color 0.3s;
}

input[type="submit"]:hover {
    background-color: #287acc;
}

table tr:nth-child(3n) td {
    border-bottom: 3px solid #333;
}

table tr td:nth-child(3n) {
    border-right: 3px solid #333;
}

input[type="text"]::placeholder {
    color: #bbb;
}

.solver-filled {
    background-color: #b3ffb3;  /* Light green background */
}

#loading {
    font-size: 1.2rem;
    color: #333;
    margin-top: 20px;
}


#clearButton {
    margin-left: 10px;
    padding: 12px 24px;
    font-size: 1.2rem;
    font-weight: bold;
    display: inline-block;
    background-color: #ff6666;
    color: white;
    border: none;
    cursor: pointer;
    border-radius: 6px;
    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
    transition: background-color 0.3s;
}

#clearButton:hover {
    background-color: #cc5252;
}
.proposed {background-color: #ccc;}
.changed {background-color: #66b3ff;}
.removed {background-color: #ff9999;}

